@@ -1,4 +1,4 @@
-.TH TANGLE 1 "16 June 2015" "Web2C @VERSION@"
+.TH TANGLE 1 "02 March 2022" "Web2C @VERSION@"
 .\"=====================================================================
 .if n .ds MF Metafont
 .if t .ds MF Metafont
@@ -21,7 +21,12 @@ tangle \- translate WEB to Pascal
 .B tangle
 .RI [ options ]
 .IR webfile [ \fB.web\fP ]
-.RI [ changefile [ \fB.ch\fP ]]
+[ {
+.IR changefile [ \fB.ch\fP ]
+|\-}
+[
+.IR outfile [ \fB.p\fP ]
+] ]
 .\"=====================================================================
 .SH DESCRIPTION
 This manual page is not meant to be exhaustive.  The complete
@@ -47,23 +52,29 @@ familiar with both \*(TX and Pascal.  \*(WB also provides a relatively
 simple, although adequate, macro facility that permits a Pascal program
 to be written in small easily-understood modules.
 .PP
-The command line should have either one or two names on it.
+The command line should have one, two or three names on it.
 The first is taken as the \*(WB file (and
 .B .web
 is added if there is no
 extension).
-If there is another name, it is a change file (and
+If there is second name, it is a change file (and
 .B .ch
 is added if there is
 no extension).  The change file overrides parts of the \*(WB file,
 as described in the \*(WB system documentation.
 .PP
-The output files are a Pascal file and a string pool file,
-whose names are formed by adding
+If there is a third name, it is the Pascal output file (and
 .B .p
-and
+is added if there is no extension). In this case you can specify an empty
+change file with '-' as the second argument.
+Otherwise the name of the Pascal file is formed by adding
+.B .p
+to the root of the \*(WB file name.
+.PP
+An optional second output file is a string pool file,
+whose name is formed by adding
 .B .pool
-respectively to the root of the \*(WB file name.
+to the root of the \*(WB file name.
 .\"=====================================================================
 .SH "OPTIONS"
 This version of
